--- a/ios-decal-proj4/ios-decal-proj4/Base.lproj/Main.storyboard
+++ b/ios-decal-proj4/ios-decal-proj4/Base.lproj/Main.storyboard
@@ -22,14 +22,14 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <animations/>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="tMq-7T-r8c">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="cesartest" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="tMq-7T-r8c">
                                 <rect key="frame" x="94" y="367" width="186" height="30"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.85882352941176465" green="0.94117647058823528" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="g8x-pd-0CV">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="pokemon13" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="g8x-pd-0CV">
                                 <rect key="frame" x="94" y="411" width="186" height="30"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.85882352939999995" green="0.94117647059999998" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -272,30 +272,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rtS-dA-TYc">
-                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                                <animations/>
-                            </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S5e-2t-d1Z">
-                                <rect key="frame" x="5" y="629" width="76" height="30"/>
-                                <animations/>
-                                <state key="normal" title="My Friends"/>
-                                <connections>
-                                    <segue destination="641-an-KbZ" kind="show" id="ewp-AZ-72v"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AAV-bt-clG">
-                                <rect key="frame" x="287" y="629" width="57" height="30"/>
-                                <animations/>
-                                <state key="normal" title="Settings"/>
-                                <connections>
-                                    <segue destination="4it-tz-wtE" kind="show" id="48o-Pm-bRh"/>
-                                </connections>
-                            </button>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="fKh-v1-Q0H">
-                                <rect key="frame" x="0.0" y="64" width="375" height="520"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="555"/>
                                 <animations/>
                             </mapView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2MI-02-1Zy">
+                                <rect key="frame" x="0.0" y="619" width="375" height="48"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S5e-2t-d1Z">
+                                        <rect key="frame" x="77" y="6" width="52" height="35"/>
+                                        <animations/>
+                                        <state key="normal" image="friends.png">
+                                            <color key="titleColor" red="0.31329652667045593" green="0.4924357533454895" blue="0.50217342376708984" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="641-an-KbZ" kind="show" id="ewp-AZ-72v"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AAV-bt-clG">
+                                        <rect key="frame" x="266" y="-4" width="57" height="56"/>
+                                        <animations/>
+                                        <state key="normal" image="settings.png">
+                                            <color key="titleColor" red="0.8332030177116394" green="0.92843729257583618" blue="0.94148832559585571" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="4it-tz-wtE" kind="show" id="48o-Pm-bRh"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" red="0.80000000000000004" green="0.9137254901960784" blue="0.92549019607843142" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -303,31 +310,37 @@
                     <navigationItem key="navigationItem" id="4Bs-st-DJI">
                         <nil key="title"/>
                         <barButtonItem key="leftBarButtonItem" style="plain" id="LgJ-0b-BzK">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Gl2-Ay-Bub">
-                                <rect key="frame" x="16" y="7" width="70" height="30"/>
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" id="Gl2-Ay-Bub">
+                                <rect key="frame" x="16" y="2" width="53" height="39"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <animations/>
-                                <state key="normal" title="Messages"/>
+                                <state key="normal" image="archive.png">
+                                    <color key="titleColor" red="0.31329652667045593" green="0.4924357533454895" blue="0.50217342376708984" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <segue destination="h65-KR-t4D" kind="show" id="o91-Ul-TRR"/>
                                 </connections>
                             </button>
                         </barButtonItem>
-                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="mHe-Zo-UBe">
-                            <rect key="frame" x="162" y="7" width="52" height="30"/>
+                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" id="mHe-Zo-UBe">
+                            <rect key="frame" x="150" y="3" width="76" height="39"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
-                            <state key="normal" title="Archive"/>
+                            <state key="normal" image="sentMessages.png">
+                                <color key="titleColor" red="0.31329652667045593" green="0.4924357533454895" blue="0.50217342376708984" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
                             <connections>
                                 <segue destination="8e6-7A-hOn" kind="show" id="qTp-FS-Cgv"/>
                             </connections>
                         </button>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="ejl-7T-WOa">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="S24-qZ-zPq">
-                                <rect key="frame" x="323" y="7" width="36" height="30"/>
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" id="S24-qZ-zPq">
+                                <rect key="frame" x="307" y="0.0" width="52" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <animations/>
-                                <state key="normal" title="Send"/>
+                                <state key="normal" image="newMessage.png">
+                                    <color key="titleColor" red="0.31329652667045593" green="0.4924357533454895" blue="0.50217342376708984" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="sendMessage:" destination="p1m-tx-SOa" eventType="touchUpInside" id="QMi-H1-55d"/>
                                     <segue destination="ECW-VP-jpb" kind="show" id="Qok-FR-eax"/>
@@ -454,6 +467,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="archive.png" width="48" height="35"/>
+        <image name="friends.png" width="52" height="35"/>
         <image name="login.png" width="396" height="684"/>
+        <image name="newMessage.png" width="41" height="35"/>
+        <image name="sentMessages.png" width="64" height="35"/>
+        <image name="settings.png" width="35" height="35"/>
     </resources>
 </document>
