--- a/ios-decal-proj4/ios-decal-proj4/Base.lproj/Main.storyboard
+++ b/ios-decal-proj4/ios-decal-proj4/Base.lproj/Main.storyboard
@@ -133,7 +133,7 @@
                                         <rect key="frame" x="8" y="5" width="311" height="30"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" spellCheckingType="yes"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="yes" spellCheckingType="yes"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghN-T8-zSG">
                                         <rect key="frame" x="323" y="6" width="44" height="30"/>
@@ -306,6 +306,9 @@
                                             <constraint firstAttribute="width" constant="44" id="xQd-VZ-t9F"/>
                                         </constraints>
                                         <state key="normal" title="Send"/>
+                                        <connections>
+                                            <action selector="sendButtonPressed:" destination="ECW-VP-jpb" eventType="touchUpInside" id="9i5-Cf-ZYa"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <animations/>
@@ -343,6 +346,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="newMessageField" destination="Lra-Ju-vg7" id="arQ-HH-4Ws"/>
+                        <outlet property="searchBar" destination="T2m-rZ-zaa" id="wGl-Db-hkn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2vt-4Q-yAY" userLabel="First Responder" sceneMemberID="firstResponder"/>
